add same solution

--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -8,6 +8,18 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    <nav>
+        @Html.ActionLink("ArrayWriter", "Index", "ArrayWriter")
+        @Html.ActionLink("Counter", "Index", "Counter")
+        @Html.ActionLink("File", "Index", "File")
+        @Html.ActionLink("Home", "Index", "Home")
+        @Html.ActionLink("Name", "Index", "Name")
+        @Html.ActionLink("PathView", "Index", "PathView")
+        @Html.ActionLink("Redirect", "Index", "Redirect")
+        @Html.ActionLink("PartialObserver", "Index", "PartialObserver")
+        @Html.ActionLink("ReturnPartial", "ReturnPartial", "PartialObserver")
+    </nav>
+    <hr />
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
