--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
         @Html.ActionLink("Counter", "Index", "Counter")
         @Html.ActionLink("File", "Index", "File")
         @Html.ActionLink("Home", "Index", "Home")
+        @Html.ActionLink("Context", "ContextInfo", "Home")
         @Html.ActionLink("Name", "Index", "Name")
         @Html.ActionLink("PathView", "Index", "PathView")
         @Html.ActionLink("Redirect", "Index", "Redirect")
